--- a/estilos.css
+++ b/estilos.css
@@ -15,10 +15,13 @@ body {
 	height: 100vh;
 	background: #1d202b;
 	/* gap:20px; */
+	max-width: 1200px;
+	margin: auto;
 }
 .container {
 	/* max-width: 1200px; */
-	padding: 40px;
+
+	/* padding: 40px; */
 	margin: auto;
 	display: grid;
 	/* grid-template-columns: repeat(auto-fill,minmax(15rem,1fr)); */
