--- a/estilos.css
+++ b/estilos.css
@@ -21,7 +21,7 @@ body {
 .container {
 	/* max-width: 1200px; */
 
-	/* padding: 40px; */
+	padding: 40px;
 	margin: auto;
 	display: grid;
 	/* grid-template-columns: repeat(auto-fill,minmax(15rem,1fr)); */
